# BerryBuddy

./: .env.example  Cargo.toml  README.md
crates/ai-foundation/: Cargo.toml
crates/ai-foundation/src/: error.rs  lib.rs  media.rs  operation.rs  realtime.rs  types.rs
crates/ai-foundation/src/generic/: image_to_image.rs  image_to_text.rs  mod.rs  multimodal_to_text.rs  structured_output.rs  text_chat.rs  text_to_audio.rs  text_to_image.rs  text_to_speech.rs  text_to_text.rs  types.rs  video_to_text.rs
crates/ai-foundation/src/providers/: capability.rs  mod.rs  model_registry.rs  router.rs  video_capability.rs
crates/ai-foundation/src/providers/ark/: adapter.rs  config.rs  mod.rs  realtime.rs  realtime_protocol.rs
crates/ai-foundation/src/providers/traits/: audio.rs  image.rs  mod.rs  realtime.rs  text.rs  tool_calling.rs  video.rs
crates/ai-foundation/src/providers/vertex/: adapter.rs  config.rs  gcs_staging.rs  mod.rs
docs/: ARK_API.md
src/: main.rs
